--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
     "node-fetch": "^2.6.1",
     "puppeteer": "7.1.0",
     "moment": "2.29.1",
-    "html_codesniffer": "^2.5.1",
-    "angular": "^1.6.5"
+    "html_codesniffer": "^2.5.1"
   },
   "scripts": {
     "lint": "eslint e2e",
     "typings": "codeceptjs def && mv steps.d.ts typings/codeceptjs.d.ts",
     "test": "codeceptjs run-multiple parallel",
-    "test:functional": "SKIP_FOR_ACCESSIBILITY='false' MOCHAWESOME_REPORTFILENAME=functional codeceptjs run-multiple parallel --grep \"${TESTS_SELECTOR:=(?=.*)^(?!.*@smoke-tests)}\" --reporter mocha-multi",
+    "test:functional": "MOCHAWESOME_REPORTFILENAME=functional codeceptjs run-multiple parallel --grep \"${TESTS_SELECTOR:=(?=.*)^(?!.*@smoke-tests)}\" --reporter mocha-multi",
     "test:smoke": "MOCHAWESOME_REPORTFILENAME=smoke codeceptjs run --grep \"${SMOKE_TESTS_SELECTOR:=@smoke-tests}\" --reporter mocha-multi"
   },
   "husky": {
